# aqi-stations-scraper

./: .gitignore  LICENSE  README.md  get_stations_info.py  japan_aqi.py  pyproject.toml
.github/workflows/: actions.yml
data/: stations_info.csv
data/japan-aqi/: (sonota),-kagawa, japan-air-quality.csv  abasolo-presidencia municipal, mexico-air-quality.csv  abikohigashi,-osaka prefecture, japan-air-quality.csv  aboshiku-kaichi nakamachi, himeji, hyogo prefecture, japan-air-quality.csv  adana-(dogankent), turkey-air-quality.csv  adana-(meteoroloji), turkey-air-quality.csv  agios-dimitrios-air-quality.csv  aioi,-hyogo prefecture, japan-air-quality.csv  aioicho,-shizuoka, japan-air-quality.csv  akanabehishino,-gifu, gifu, japan-air-quality.csv  akebonocho,-fukuyama, hiroshima prefecture, japan-air-quality.csv  akebonocho,-hyogo prefecture, japan-air-quality.csv  akitsu,-kumamoto-ken, japan-air-quality.csv  akiumachi-nagafukuro, miyagi-ken, japan-air-quality.csv  al-rumaithiya,-kuwait-air-quality.csv  amagasaki,-hyogo prefecture, japan-air-quality.csv  amarubecho,-kameoka, kyoto prefecture, japan-air-quality.csv  amori,-nagano, nagano, japan-air-quality.csv  anand-vihar, delhi, delhi, india-air-quality.csv  anesaki,-ichihara, chiba, japan-air-quality.csv  anshincho,-shizuoka prefecture, japan-air-quality.csv  arai,-miyagi-ken, japan-air-quality.csv  araicho-chidori, takasago, hyogo prefecture, japan-air-quality.csv  aramachi,-moka, tochigi, japan-air-quality.csv  art-center, aksu-air-quality.csv  asahi,-aioi, hyogo prefecture, japan-air-quality.csv  (+718 more)
