[tool.poetry]
name = "aqi-stations-scraper"
version = "0.1.0"
description = ""
authors = ["Alejandro Fontal <alejandrofontal92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
geckodriver-autoinstaller = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
