[tool.poetry]
name = "aqi-stations-scraper"
version = "0.1.0"
description = "Small Python utility used to generate historical Air Quality Index datasets scraping https://aqicn.org"
authors = ["Alejandro Fontal <alejandrofontal92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "*"
requests = "*"
beautifulsoup4 = "*"
geckodriver-autoinstaller = "*"
python-dotenv = "*"
pandas = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
